--- a/listapersonehtmlmongo.html
+++ b/listapersonehtmlmongo.html
@@ -43,7 +43,7 @@ async function listaPersone()
 </head>
 
 <body>
-<h1>Lista persone (HTML)</h1>
+<h1>Lista persone (HTML) - Mongo</h1>
 <body onLoad="listaPersone();"></body>
 
 <div id="anagrafica"></div>
