--- a/app/listapersonehtml.html
+++ b/app/listapersonehtml.html
@@ -7,7 +7,7 @@
 async function getPersons()
 {
   
-	let url='/api/listapersonemongo';
+	let url='/api/listapersonejson';
 	try {
 		let res=await fetch(url);
 		return await res.text();
