--- a/app/inseriscipersona.html
+++ b/app/inseriscipersona.html
@@ -4,7 +4,7 @@
     <title>Inserisci persona</title>
 </head>
 <body>
-    <form action="/api/inseriscimongo" method="POST">
+    <form action="/api/inseriscipersona" method="POST">
         <label>(MONGO) Nome</label>
         <input type="text" name="nome">
         <label>Cognome</label>
