22010518 Normalizzazione cartella public Laptop17

--- a/public/listapersonehtmlv1.html
+++ b/public/listapersonehtmlv1.html
@@ -43,7 +43,7 @@ async function listaPersone()
 </head>
 
 <body>
-<h1>Lista persone (HTML)</h1>
+<h1>Lista persone (HTML) v1</h1>
 <body onLoad="listaPersone();"></body>
 
 <div id="anagrafica"></div>
