--- a/vue/eliminapersona1.html
+++ b/vue/eliminapersona1.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista persone - Vue</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -24,10 +24,11 @@
         <hr>
         <div id="app">
             <h2>Contatore</h2>
+            <h1>
             <div v-if="min!=max">
                 <p style="font-size:12em">{{counter}}</p>
 
-                <p style="font-size:12em">{{ cognome }}</p>
+
 
                 <div class="row">
 
@@ -65,12 +66,28 @@
             cognome: "Carraro",
             cognomeArray : ['francesco','mauro','massimo'],
         },
+/*        
         mounted: function () {
             console.log('MONTATO CORRETTAMENTE');
             this.counter = 0;
             this.cognome="Carraro2";
 
+            axios
+//                .get('https://api.coindesk.com/v1/bpi/currentprice.json')
+                .get('http://localhost:3000/api/listapersonejson')
+                .then(response => (this.info = response))
+
         },
+*/
+
+mounted() {
+            axios
+//                .get('https://api.coindesk.com/v1/bpi/currentprice.json')
+                .get('http://localhost:3000/api/listapersonejson')
+                .then(response => (this.info = response))
+        },
+
+
         methods: {
 
 
