--- a/autenticazione/formautenticazione.html
+++ b/autenticazione/formautenticazione.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>Form validazione</h2>
+<h2>Generazione token</h2>
 
 <form action="/api/v1/generatoken" method="POST">
   <label for="username">Username:</label><br>
@@ -13,7 +13,7 @@
 </form> 
 
 
-<p>Notice that the value of the "First name" field will not be submitted, because the input element does not have a name attribute.</p>
+<p>Utilizzare il token generato per la validazione</p>
 
 </body>
 </html>
