--- a/autenticazione/validazionetoken.html
+++ b/autenticazione/validazionetoken.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+  <body onLoad="caricaheader();"></body>
 <h2>Validazione token</h2>
 
-<form action="/api/v1/foto" method="GET">
-  <label for="Authorization">Inserisci il token:</label><br>
-  <input type="text" name="Authorization" value="Bearer "><br><br>
+<form action="/api/v1/wipedb" method="POST">
+  <label for="token">Inserisci il token:</label><br>
+  <input type="text" size="327" name="token" value="Bearer "><br><br>
   <input type="submit" value="Genera token">
 </form> 
 
 </body>
 </html>
+
+<script>
+/*
+  function caricaheader()
+  {
+    httpClient.DefaultRequestHeaders.Authorization =
+    new AuthenticationHeaderValue("Bearer", "Your Oauth token");
+  }
+  /*
+  
+httpClient.DefaultRequestHeaders.Authorization =
+    new AuthenticationHeaderValue("Bearer", "Your Oauth token");
+ */
+</script>
