--- a/autenticazione/validazionetoken.html
+++ b/autenticazione/validazionetoken.html
@@ -7,7 +7,7 @@
 <form action="/api/v1/wipedb" method="POST">
   <label for="token">Inserisci il token:</label><br>
   <input type="text" size="327" name="token" value="Bearer "><br><br>
-  <input type="submit" value="Genera token">
+  <input type="submit" value="Valida token">
 </form> 
 
 </body>
