--- a/vue/eliminapersona.html
+++ b/vue/eliminapersona.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <h1>
-            <p align="center">Form inserimento e cancellazione - Vue JS</p>
+            <p align="center">Form cancellazione - Vue JS</p>
         </h1>
         <hr>
         <div id="app">
