--- a/public/listapersonehtmlv1.html
+++ b/public/listapersonehtmlv1.html
@@ -7,7 +7,7 @@
 async function getPersons()
 {
   
-	let url='/api/listapersonejson';
+	let url='/api/v1/listapersonejson';
 	try {
 		let res=await fetch(url);
 		return await res.text();
